--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "ispider"
-version = "0.5b23"
+version = "0.6.2"
 description = "A high-speed web spider for massive scraping."
 authors = [{ name = "Daniele Rugginenti", email = "daniele.rugginenti@gmail.com" }]
 urls = {"Homepage" =  "https://github.com/danruggi/ispider"}
